--- a/style.css
+++ b/style.css
@@ -10,13 +10,31 @@ img {
 body {
 	background-image: url('imagen.jpg');
 }
-.main {
-	width: 100%;
-	height: 100%;
+
+.container {
+    background-color: rgba(255, 0, 0, 0.2);
+    margin: 2rem;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+
 }
 
-.main img {
+.folder img {
 	width: 6rem;
 	cursor: move;
+    z-index: 999;
 }
+
+.papelera {
+    grid-area: 6 / 11 / 7 / 12;
+}
+
+.papelera img {
+    cursor: move;
+}
+
+
 
