--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+/*Config Generales
+Diseño & Programación: Ninjasweb.com
+2020
+*/
+
 * {
 	padding: 0;
 	margin: 0;
 }
+
 
 img {
 	max-width: 100%;
