--- a/style.css
+++ b/style.css
@@ -1,13 +1,18 @@
-/*Config Generales
+/*Crédits:;
 Diseño & Programación: Ninjasweb.com
-2020
+Enero 2020
 */
 
+
+/*Config General*/
 * {
 	padding: 0;
 	margin: 0;
 }
 
+p {
+    font-family: sans-serif;
+}
 
 img {
 	max-width: 100%;
@@ -56,6 +61,7 @@ body {
 
 .folder p {
     color: #fff;
+    font-family: sans-serif;
 }
 
 /* PAPELERA */
@@ -71,6 +77,7 @@ body {
 .papelera p {
     color: #fff;
     text-align: center;
+    font-family: sans-serif;
 }
 
 .modal {
