--- a/style.css
+++ b/style.css
@@ -30,33 +30,58 @@ body {
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     height: 100vh;
+    position: relative;
+    padding: 30px;
 
 }
 
 /* Header */
 .header {
     width: 100vw;
-    height: 30px;
+    height: 35px;
     background-color: #ccc;
     display: inline-block;
 }
 
-.header .finder {
+.finder {
     font-weight: bold;
+}
+
+.header .lf_header {
     font-family: arial;
     float: left;
     margin: auto;
+    margin-left: 30px;
+    margin-top: 8px;
+}
+
+.header .rg_header {
+    margin-right: 40px;
+    margin-top: 8px;
+    font-family: sans-serif;
 }
 
 .header img {
     max-height: 100%;
+    height: 30px;
     float: right;
+    margin-right: 20px;
+}
+
+.header p {
+    float: right;
+}
+
+/*Carpetas*/
+
+.folder {
+    position: relative;
 }
 
 .folder img {
 	width: 6em;
-	cursor: move;
-    z-index: 999;
+	cursor: grab;
+    z-index: 9;
 }
 
 .folder p {
@@ -80,8 +105,41 @@ body {
     font-family: sans-serif;
 }
 
-.modal {
+/*MODAL*/
+
+#modal {
     display: none;
+}
+
+.modal {
+    width: 400px;
+    height: 300px;
+    background-color: #efefef;
+    z-index: 99;
+    position: absolute;
+    border-radius: 5px;
+}
+
+.modal .modal_header {
+    width: 100%;
+    background-color: #fff;
+    border-radius: 5px;
+}
+
+.modal .modal_header button {
+    cursor: pointer;
+    background-color: #f17793;
+    border: none;
+    width: 15px;
+    height: 15px;
+    border-radius: 30px;
+    margin-left: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.modal .modal_header button:hover {
+    background-color: #ff2d5d;
 }
 
 
