Cambios en el modal
Agregamos los botones del modal. Y agregamos sombras

--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ body {
 }
 
 .container {
-    background-color: rgba(255, 0, 0, 0.2);
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-column-gap: 0px;
@@ -76,10 +75,13 @@ body {
 
 .folder {
     position: relative;
+    -webkit-box-shadow: 0px 2px 10px 6px rgba(0,0,0,0.31); 
+    box-shadow: 0px 2px 10px 6px rgba(0,0,0,0.31);
+    text-align: center;
 }
 
 .folder img {
-	width: 6em;
+	width: 5em;
 	cursor: grab;
     z-index: 9;
 }
@@ -118,6 +120,8 @@ body {
     z-index: 99;
     position: absolute;
     border-radius: 5px;
+    -webkit-box-shadow: 0px 2px 10px 6px rgba(0,0,0,0.31); 
+    box-shadow: 0px 2px 10px 6px rgba(0,0,0,0.31);
 }
 
 .modal .modal_header {
@@ -126,6 +130,8 @@ body {
     border-radius: 5px;
 }
 
+/*Botón cerrar rojo*/
+
 .modal .modal_header button {
     cursor: pointer;
     background-color: #f17793;
@@ -133,7 +139,7 @@ body {
     width: 15px;
     height: 15px;
     border-radius: 30px;
-    margin-left: 10px;
+    margin-left: 8px;
     margin-top: 5px;
     margin-bottom: 5px;
 }
@@ -141,6 +147,25 @@ body {
 .modal .modal_header button:hover {
     background-color: #ff2d5d;
 }
+
+/*Botón amarillo*/
+.modal .modal_header .btn_amarillo {
+    background-color: #fdbd3b;
+}
+.modal .modal_header .btn_amarillo:hover {
+    background-color: #dd970a;
+}
+
+/*Botón verde*/
+.modal .modal_header .btn_verde {
+    background-color: #31c846;
+}
+.modal .modal_header .btn_verde:hover {
+    background-color: #008212;
+}
+
+
+
 
 
 
